--- a/wp-content/themes/wordStrike/css/style.css
+++ b/wp-content/themes/wordStrike/css/style.css
@@ -1,1 +1,1 @@
-.test{color:brown}
+.masthead{height:60%;background-image:url("../images/12.jpg")}.ui.middlebig{padding-top:12rem}.margin100px{display:block;margin-top:100px}h1 span.library{display:block;font-size:1.75em;font-weight:bold}div.ui.container{margin:2em 0 2em}div.ui.container button.fluid.ui.button{margin-top:1.5em}
