--- a/compass/sass/style.scss
+++ b/compass/sass/style.scss
@@ -23,7 +23,7 @@ h1 span.library {
 
 div.ui.container {
   margin: 2em 0 2em;
-  button.fluid.ui.button {
+  a.fluid.ui.button {
     margin-top: 1.5em;
   }
 }
