优化导入生词本功能,到此主要流程功能完成

--- a/compass/sass/style.scss
+++ b/compass/sass/style.scss
@@ -27,3 +27,10 @@ div.ui.container {
     margin-top: 1.5em;
   }
 }
+
+#play {
+  cursor: pointer;
+  &:hover {
+    background-color: #21ba45;
+  }
+}
