--- a/wp-content/themes/wordStrike/css/style.css
+++ b/wp-content/themes/wordStrike/css/style.css
@@ -45,3 +45,14 @@ div.ui.container a.fluid.ui.button {
   margin-top: 5px;
   line-height: 5px;
 }
+
+/* line 43, ../../../../compass/sass/style.scss */
+.bottom-button {
+  position: fixed;
+  bottom: 10px;
+}
+/* line 46, ../../../../compass/sass/style.scss */
+.bottom-button .right {
+  position: absolute;
+  right: 0;
+}
