--- a/wp-content/themes/wordStrike/css/style.css
+++ b/wp-content/themes/wordStrike/css/style.css
@@ -1,53 +1,59 @@
-/* line 3, ../../../../compass/sass/style.scss */
+@font-face {
+  font-family: 'WordHackerPhonetic';
+  src: url("../images/WordHackerPhonetic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+/* line 10, ../../../../compass/sass/style.scss */
 .masthead {
   height: 60%;
   background-image: url("../images/12.jpg");
 }
 
-/* line 9, ../../../../compass/sass/style.scss */
+/* line 16, ../../../../compass/sass/style.scss */
 .ui.middlebig {
   padding-top: 12rem;
 }
 
-/* line 13, ../../../../compass/sass/style.scss */
+/* line 20, ../../../../compass/sass/style.scss */
 .margin100px {
   display: block;
   margin-top: 100px;
 }
 
-/* line 18, ../../../../compass/sass/style.scss */
+/* line 25, ../../../../compass/sass/style.scss */
 h1 span.library {
   display: block;
   font-size: 1.75em;
   font-weight: bold;
 }
 
-/* line 24, ../../../../compass/sass/style.scss */
+/* line 31, ../../../../compass/sass/style.scss */
 div.ui.container {
   margin: 2em 0 2em;
 }
-/* line 26, ../../../../compass/sass/style.scss */
+/* line 33, ../../../../compass/sass/style.scss */
 div.ui.container a.fluid.ui.button {
   margin-top: 1.5em;
 }
 
-/* line 31, ../../../../compass/sass/style.scss */
+/* line 38, ../../../../compass/sass/style.scss */
 #play {
   cursor: pointer;
 }
 
-/* line 35, ../../../../compass/sass/style.scss */
+/* line 42, ../../../../compass/sass/style.scss */
 .admin.ui.button {
   margin-top: 5px;
   line-height: 5px;
 }
 
-/* line 40, ../../../../compass/sass/style.scss */
+/* line 47, ../../../../compass/sass/style.scss */
 .bottom-button {
   position: fixed;
   bottom: 10px;
 }
-/* line 43, ../../../../compass/sass/style.scss */
+/* line 50, ../../../../compass/sass/style.scss */
 .bottom-button .right {
   position: absolute;
   right: 0;
