加入音标字体

--- a/compass/sass/style.scss
+++ b/compass/sass/style.scss
@@ -1,8 +1,8 @@
 $imagesUrl : "../images/";
 
 @font-face {
-  font-family: 'WordHackerPhonetic';
-  src: url($imagesUrl + 'WordHackerPhonetic.ttf') format('truetype');
+  font-family: 'Ksphonet';
+  src: url($imagesUrl + 'Ksphonet.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
