--- a/wp-content/themes/wordStrike/css/style.css
+++ b/wp-content/themes/wordStrike/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-  font-family: 'WordHackerPhonetic';
-  src: url("../images/WordHackerPhonetic.ttf") format("truetype");
+  font-family: 'Ksphonet';
+  src: url("../images/Ksphonet.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
