去掉音标字体

--- a/compass/sass/style.scss
+++ b/compass/sass/style.scss
@@ -1,11 +1,11 @@
 $imagesUrl : "../images/";
 
-@font-face {
+/*@font-face {
   font-family: 'Ksphonet';
   src: url($imagesUrl + 'Ksphonet.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
-}
+}*/
 
 .masthead {
   height: 60%;
