增加音标字体

--- a/compass/sass/style.scss
+++ b/compass/sass/style.scss
@@ -37,7 +37,7 @@ div.ui.container {
 
 #play {
   cursor: pointer;
-  font-family: 'Ksphonet';
+  font-family: "Ksphonet", Helvetica, Arial, sans-serif ;
 }
 
 .admin.ui.button {
