--- a/wp-content/themes/wordStrike/css/style.css
+++ b/wp-content/themes/wordStrike/css/style.css
@@ -1,60 +1,66 @@
 @font-face {
   font-family: 'Ksphonet';
-  src: url("../images/Ksphonet.ttf") format("truetype");
+  src: url("../css/fonts/Ksphonet.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
-/* line 10, ../../../../compass/sass/style.scss */
+@font-face {
+  font-family: 'WordHackerPhonetic';
+  src: url("../css/fonts/WordHackerPhonetic.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+/* line 18, ../../../../compass/sass/style.scss */
 .masthead {
   height: 60%;
   background-image: url("../images/12.jpg");
 }
 
-/* line 16, ../../../../compass/sass/style.scss */
+/* line 24, ../../../../compass/sass/style.scss */
 .ui.middlebig {
   padding-top: 12rem;
 }
 
-/* line 20, ../../../../compass/sass/style.scss */
+/* line 28, ../../../../compass/sass/style.scss */
 .margin100px {
   display: block;
   margin-top: 100px;
 }
 
-/* line 25, ../../../../compass/sass/style.scss */
+/* line 33, ../../../../compass/sass/style.scss */
 h1 span.library {
   display: block;
   font-size: 1.75em;
   font-weight: bold;
 }
 
-/* line 31, ../../../../compass/sass/style.scss */
+/* line 39, ../../../../compass/sass/style.scss */
 div.ui.container {
   margin: 2em 0 2em;
 }
-/* line 33, ../../../../compass/sass/style.scss */
+/* line 41, ../../../../compass/sass/style.scss */
 div.ui.container a.fluid.ui.button {
   margin-top: 1.5em;
 }
 
-/* line 38, ../../../../compass/sass/style.scss */
+/* line 46, ../../../../compass/sass/style.scss */
 #play {
   cursor: pointer;
-  font-family: 'Ksphonet';
+  font-family: "Ksphonet", "WordHackerPhonetic", "lucida sans unicode", arial, sans-serif;
 }
 
-/* line 43, ../../../../compass/sass/style.scss */
+/* line 51, ../../../../compass/sass/style.scss */
 .admin.ui.button {
   margin-top: 5px;
   line-height: 5px;
 }
 
-/* line 48, ../../../../compass/sass/style.scss */
+/* line 56, ../../../../compass/sass/style.scss */
 .bottom-button {
   position: fixed;
   bottom: 10px;
 }
-/* line 51, ../../../../compass/sass/style.scss */
+/* line 59, ../../../../compass/sass/style.scss */
 .bottom-button .right {
   position: absolute;
   right: 0;
