--- a/compass/sass/style.scss
+++ b/compass/sass/style.scss
@@ -27,7 +27,7 @@ $fontUrl : "../css/fonts/";
 
 .margin100px {
   display: block;
-  margin-top: 100px;
+  padding-top: 100px;
 }
 
 h1 span.library {
