--- a/wp-content/themes/wordStrike/css/style.css
+++ b/wp-content/themes/wordStrike/css/style.css
@@ -24,7 +24,7 @@
 /* line 28, ../../../../compass/sass/style.scss */
 .margin100px {
   display: block;
-  margin-top: 100px;
+  padding-top: 100px;
 }
 
 /* line 33, ../../../../compass/sass/style.scss */
